--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="unknown_device">unknown_device</string>
     <string name="ibeacon_measure">iBeacon measure</string>
     <string name="name">Rosicky</string>
+    <string name="select_from_photo">从相册选择</string>
+    <string name="take_photo">拍照上传</string>
 
 </resources>
